frontend/tests/cases/negative/security.gr.output
Type checking failed: 
Grading error: frontend/tests/cases/negative/security.gr:17:8:
Private value cannot be moved to level Public